--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="main-nav">
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item">
-              <a href="index.html" class="site-menu__link">Каталог товаров</a>
+              <a href="catalog.html" class="site-menu__link">Каталог товаров</a>
             </li>
             <li class="site-menu__item">
               <a href="form.html" class="site-menu__link">Вязание на заказ</a>
@@ -32,9 +32,7 @@
     </header>
     <main class="page-main">
       <div class="page-main__container">
-        <section class="page-title">
-          <h1 class="page-title-text">Милые штуки ручной работы для дома</h1>
-        </section>
+          <h1 class="page-title">Милые штуки ручной работы для дома</h1>
         <section class="product-menu">
           <ul class="product-manu__list">
             <li class="product-menu__item">
@@ -74,6 +72,7 @@
           </div>
         </section>
         <section class="advantages">
+          <div class="advantages__container">
           <h2 class="advantages__title-text">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="advantages__item">Экологически чистые материалы</li>
@@ -83,9 +82,10 @@
             <li class="advantages__item">Поддержка отечественного производителя</li>
             <li class="advantages__item">Поставляется в подарочной упаковке</li>
           </ul>
+          </div>
         </section>
         <section class="reviews">
-          <h2 class="reviews__title-text">Отзывы</h2>
+          <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
             <blockquote class="reviews__item reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <cite class="reviews__author">
@@ -99,7 +99,7 @@
         </section>
         <section class="contacts">
           <div class="contacts__container">
-            <h3 class="contact__title--text">Контакты</h3>
+            <h3 class="contact__title">Контакты</h3>
             <table class="contacts__list">
               <tr class="contacts__item">
                 <td class="contacts__value">e-mail</td>
@@ -123,15 +123,15 @@
       <div class="page-footer__container">
         <ul class="page-footer__social social__list">
           <li class="social__item">
-            <a href="#" class="social__link-inst"></a>inst</li>
+            <a href="#" class="social__link social__link--inst"></a>inst</li>
           <li class="social__item">
-            <a href="#" class="social__link-fb"></a>fb</li>
+            <a href="#" class="social__link social__link--fb"></a>fb</li>
           <li class="social__item">
-            <a href="#" class="social__link-tw"></a>tw</li>
+            <a href="#" class="social__link social__link--tw"></a>tw</li>
         </ul>
 
         <div class="page-footer__coopyright">
-          <b class="page-footer__coopyright-text">Разработано</b>
+          <b class="page-footer__coopyright">Разработано</b>
           <a href="#" class="page-footer__coopyright-link">
             <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
           </a>
