Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
           </ul>
         </section>
         <section class="week-product">
-          <div class="week-product__container">
             <div class="week-product__title">
               <h2 class="week-product__title-text">Вязаные корзинки</h2>
               <h3 class="week-product__title-description">Товар недели</h3>
@@ -69,11 +68,10 @@
             <img src="http://placehold.it/260x315" alt="Вязаные корзинки" class="week-product__image">
             <b class="week-product__price">Цена: 990 руб.</b>
             <a href="#" class="week-product-order">ЗАКАЗАТЬ</a>
-          </div>
         </section>
         <section class="advantages">
           <div class="advantages__container">
-          <h2 class="advantages__title-text">Коротко о нас:</h2>
+          <h2 class="advantages__title">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="advantages__item">Экологически чистые материалы</li>
             <li class="advantages__item">Скандинавский стиль по российской цене</li>
@@ -87,7 +85,7 @@
         <section class="reviews">
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
-            <blockquote class="reviews__item reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
+            <blockquote class="reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <cite class="reviews__author">
               <b class="reviews__author-name">Анастасия Красильникова</b>
               <b class="reviews__author-email">@misssssiskras</b>
@@ -131,7 +129,7 @@
         </ul>
 
         <div class="page-footer__coopyright">
-          <b class="page-footer__coopyright">Разработано</b>
+          <b class="page-footer__coopyright-text">Разработано</b>
           <a href="#" class="page-footer__coopyright-link">
             <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
           </a>
