Разметка страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
     </header>
     <main class="page-main">
       <div class="page-main__container">
-          <h1 class="page__title">Каталог товаров</h1>
+        <h1 class="page__title">Каталог товаров</h1>
         <section class="main-catalog product-preview">
           <ul class="main-catalog__list product-preview__list">
             <li class="product-preview__item">
@@ -63,24 +63,24 @@
               </div>
             </li>
           </ul>
-        </div>
+
       </section>
-      <section class="production">
-        <div class="production__container">
-          <section class="production__title">
-            <h2 class="page__title">Процесс производства</h1>
-          </section>
-          <section class="production__video">
+      </div>
+      <section class="production-view">
+        <div class="production-view__container">
+
+            <h2 class="production-view__title">Процесс производства</h2>
+
+          <section class="production-view__video">
             <img src="http://placehold.it/260x150" alt="" class="http://placehold.it/260x195-img">
-            <p class="production__video-descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-            <a href="" class="production__video-order">Сделать заказ</a>
+            <p class="production-view__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <a href="" class="production-view__order">Сделать заказ</a>
           </section>
 
         </div>
 
       </section>
 
-    </div>
   </main>
   <footer class="page-footer">
     <div class="page-footer__container">
@@ -94,7 +94,7 @@
       </ul>
 
       <div class="page-footer__coopyright">
-        <b class="page-footer__coopyright">Разработано</b>
+        <b class="page-footer__coopyright-text">Разработано</b>
         <a href="#" class="page-footer__coopyright-link">
           <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
         </a>
