--- a/form.html
+++ b/form.html
@@ -32,12 +32,11 @@
     </header>
     <main class="page-main">
       <div class="page-main__container">
-          <h1 class="page__title-text">Вязание на заказ</h1>
+        <h1 class="page__title">Вязание на заказ</h1>
         <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
-          <div class="form-order__description">
-            <p class="form-order__description-text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+            <p class="form-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">ТИП</h2>
+              <h2 class="form-order__section-title">ТИП</h2>
               <label class="form-order__label">
                 <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
                 Аксессуар для интерьера
@@ -48,7 +47,7 @@
               </label>
             </fieldset>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">Цвет</h2>
+              <h2 class="form-order__section-title">Цвет</h2>
               <label class="form-order__label">
                 <input type="checkbox" class="form-order__input" name="product-color__white" checked>
                 Белый
@@ -75,7 +74,7 @@
               </label>
             </fieldset>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">ФИО</h2>
+              <h2 class="form-order__section-title">ФИО</h2>
               <label class="form-order__label">
                 Имя:
                 <input class="form-order__input" type="text" name="name">
@@ -90,20 +89,19 @@
               </label>
             </fieldset>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">ТЕЛ</h2>
-              <input class="form-order__input" type="text" name="" value="" placeholder="+7 ХХХ ХХ ХХ*">
+              <h2 class="form-order__section-title">ТЕЛ</h2>
+              <input class="form-order__input" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
             </fieldset>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">E-MAIL</h2>
-              <input class="form-order__input" type="text" name="" value="" placeholder="Ваш Email*">
+              <h2 class="form-order__section-title">E-MAIL</h2>
+              <input class="form-order__input" type="text" name="email" value="" placeholder="Ваш Email*">
             </fieldset>
             <fieldset class="form-order__section">
-              <h2 class="form-order__section-text">ДОП</h2>
+              <h2 class="form-order__section-title">ДОП</h2>
               <textarea name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
             <p class="form-order__description-required">*Поля обязательны для заполнения</p>
             <button class="form-order__submit" type="submit">Отправить заказ</button>
-          </div>
         </form>
       </div>
     </main>
