--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <nav class="main-nav">
+          <button class="main-nav__tiggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item">
               <a href="catalog.html" class="site-menu__link">Каталог товаров</a>
@@ -32,7 +33,7 @@
     </header>
     <main class="page-main">
       <div class="page-main__container">
-          <h1 class="page-title">Милые штуки ручной работы для дома</h1>
+        <h1 class="page-title">Милые штуки ручной работы для дома</h1>
         <section class="product-menu">
           <ul class="product-manu__list">
             <li class="product-menu__item">
@@ -44,42 +45,42 @@
           </ul>
         </section>
         <section class="week-product">
-            <div class="week-product__title">
-              <h2 class="week-product__title-text">Вязаные корзинки</h2>
-              <h3 class="week-product__title-description">Товар недели</h3>
-            </div>
-            <div class="week-product-description">
-              <p class="week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-              <table class="week-product__info">
-                <tr class="week-product__item">
-                  <td class="week-product__value">Цвет:</td>
-                  <td class="week-product__value">«Тиффани»/серый</td>
-                </tr>
-                <tr class="week-product__item">
-                  <td class="week-product__value">Диаметр:</td>
-                  <td class="week-product__value">25 см</td>
-                </tr>
-                <tr class="week-product__item">
-                  <td class="week-product__value">Высота:</td>
-                  <td class="week-product__value">15 см</td>
-                </tr>
-              </table>
-            </div>
-            <img src="http://placehold.it/260x315" alt="Вязаные корзинки" class="week-product__image">
-            <b class="week-product__price">Цена: 990 руб.</b>
-            <a href="#" class="week-product-order">ЗАКАЗАТЬ</a>
+          <div class="week-product__title">
+            <h2 class="week-product__title-text">Вязаные корзинки</h2>
+            <h3 class="week-product__title-description">Товар недели</h3>
+          </div>
+          <div class="week-product-description">
+            <p class="week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+            <table class="week-product__info">
+              <tr class="week-product__item">
+                <td class="week-product__value">Цвет:</td>
+                <td class="week-product__value">«Тиффани»/серый</td>
+              </tr>
+              <tr class="week-product__item">
+                <td class="week-product__value">Диаметр:</td>
+                <td class="week-product__value">25 см</td>
+              </tr>
+              <tr class="week-product__item">
+                <td class="week-product__value">Высота:</td>
+                <td class="week-product__value">15 см</td>
+              </tr>
+            </table>
+          </div>
+          <img src="http://placehold.it/260x315" alt="Вязаные корзинки" class="week-product__image">
+          <b class="week-product__price">Цена: 990 руб.</b>
+          <a href="#" class="week-product-order">ЗАКАЗАТЬ</a>
         </section>
         <section class="advantages">
           <div class="advantages__container">
-          <h2 class="advantages__title">Коротко о нас:</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item">Экологически чистые материалы</li>
-            <li class="advantages__item">Скандинавский стиль по российской цене</li>
-            <li class="advantages__item">Увеличивает лайки на фотографиях</li>
-            <li class="advantages__item">Связано вручную с любовью и умилением</li>
-            <li class="advantages__item">Поддержка отечественного производителя</li>
-            <li class="advantages__item">Поставляется в подарочной упаковке</li>
-          </ul>
+            <h2 class="advantages__title">Коротко о нас:</h2>
+            <ul class="advantages__list">
+              <li class="advantages__item">Экологически чистые материалы</li>
+              <li class="advantages__item">Скандинавский стиль по российской цене</li>
+              <li class="advantages__item">Увеличивает лайки на фотографиях</li>
+              <li class="advantages__item">Связано вручную с любовью и умилением</li>
+              <li class="advantages__item">Поддержка отечественного производителя</li>
+              <li class="advantages__item">Поставляется в подарочной упаковке</li>
+            </ul>
           </div>
         </section>
         <section class="reviews">
