Разметка страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,7 @@
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <nav class="main-nav">
+          <button class="main-nav__tiggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item">
               <a href="catalog.html" class="site-menu__link">Каталог товаров</a>
@@ -64,12 +65,12 @@
             </li>
           </ul>
 
-      </section>
+        </section>
       </div>
       <section class="production-view">
         <div class="production-view__container">
 
-            <h2 class="production-view__title">Процесс производства</h2>
+          <h2 class="production-view__title">Процесс производства</h2>
 
           <section class="production-view__video">
             <img src="http://placehold.it/260x150" alt="" class="http://placehold.it/260x195-img">
@@ -81,26 +82,26 @@
 
       </section>
 
-  </main>
-  <footer class="page-footer">
-    <div class="page-footer__container">
-      <ul class="page-footer__social social__list">
-        <li class="social__item">
-          <a href="#" class="social__link social__link--inst"></a>inst</li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--fb"></a>fb</li>
-        <li class="social__item">
-          <a href="#" class="social__link social__link--tw"></a>tw</li>
-      </ul>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__container">
+        <ul class="page-footer__social social__list">
+          <li class="social__item">
+            <a href="#" class="social__link social__link--inst"></a>inst</li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--fb"></a>fb</li>
+          <li class="social__item">
+            <a href="#" class="social__link social__link--tw"></a>tw</li>
+        </ul>
 
-      <div class="page-footer__coopyright">
-        <b class="page-footer__coopyright-text">Разработано</b>
-        <a href="#" class="page-footer__coopyright-link">
-          <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
-        </a>
+        <div class="page-footer__coopyright">
+          <b class="page-footer__coopyright-text">Разработано</b>
+          <a href="#" class="page-footer__coopyright-link">
+            <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-</body>
+  </body>
 </html>
