--- a/form.html
+++ b/form.html
@@ -11,6 +11,7 @@
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <nav class="main-nav">
+          <button class="main-nav__tiggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
             <li class="site-menu__item">
               <a href="index.html" class="site-menu__link">Каталог товаров</a>
@@ -34,74 +35,74 @@
       <div class="page-main__container">
         <h1 class="page__title">Вязание на заказ</h1>
         <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
-            <p class="form-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">ТИП</h2>
-              <label class="form-order__label">
-                <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
-                Аксессуар для интерьера
-              </label>
-              <label class="form-order__label">
-                <input class="form-order__input" type="radio" name="type" value="Детская игрушка">
-                Детская игрушка
-              </label>
-            </fieldset>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">Цвет</h2>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__white" checked>
-                Белый
-              </label>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__grey" checked>
-                Серый
-              </label>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__tiffany">
-                «Тиффани»
-              </label>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__black">
-                Черный
-              </label>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__pink">
-                Розовый
-              </label>
-              <label class="form-order__label">
-                <input type="checkbox" class="form-order__input" name="product-color__orange">
-                Оранжевый
-              </label>
-            </fieldset>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">ФИО</h2>
-              <label class="form-order__label">
-                Имя:
-                <input class="form-order__input" type="text" name="name">
-              </label>
-              <label class="form-order__label">
-                Фамилия:
-                <input class="form-order__input" type="text" name="surname">
-              </label>
-              <label class="form-order__label">
-                Отчество:
-                <input class="form-order__input" type="text" name="patronymic">
-              </label>
-            </fieldset>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">ТЕЛ</h2>
-              <input class="form-order__input" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
-            </fieldset>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">E-MAIL</h2>
-              <input class="form-order__input" type="text" name="email" value="" placeholder="Ваш Email*">
-            </fieldset>
-            <fieldset class="form-order__section">
-              <h2 class="form-order__section-title">ДОП</h2>
-              <textarea name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-            </fieldset>
-            <p class="form-order__description-required">*Поля обязательны для заполнения</p>
-            <button class="form-order__submit" type="submit">Отправить заказ</button>
+          <p class="form-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">ТИП</h2>
+            <label class="form-order__label">
+              <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
+              Аксессуар для интерьера
+            </label>
+            <label class="form-order__label">
+              <input class="form-order__input" type="radio" name="type" value="Детская игрушка">
+              Детская игрушка
+            </label>
+          </fieldset>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">Цвет</h2>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__white" checked>
+              Белый
+            </label>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__grey" checked>
+              Серый
+            </label>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__tiffany">
+              «Тиффани»
+            </label>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__black">
+              Черный
+            </label>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__pink">
+              Розовый
+            </label>
+            <label class="form-order__label">
+              <input type="checkbox" class="form-order__input" name="product-color__orange">
+              Оранжевый
+            </label>
+          </fieldset>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">ФИО</h2>
+            <label class="form-order__label">
+              Имя:
+              <input class="form-order__input" type="text" name="name">
+            </label>
+            <label class="form-order__label">
+              Фамилия:
+              <input class="form-order__input" type="text" name="surname">
+            </label>
+            <label class="form-order__label">
+              Отчество:
+              <input class="form-order__input" type="text" name="patronymic">
+            </label>
+          </fieldset>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">ТЕЛ</h2>
+            <input class="form-order__input" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
+          </fieldset>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">E-MAIL</h2>
+            <input class="form-order__input" type="text" name="email" value="" placeholder="Ваш Email*">
+          </fieldset>
+          <fieldset class="form-order__section">
+            <h2 class="form-order__section-title">ДОП</h2>
+            <textarea name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </fieldset>
+          <p class="form-order__description-required">*Поля обязательны для заполнения</p>
+          <button class="form-order__submit" type="submit">Отправить заказ</button>
         </form>
       </div>
     </main>
