Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="container">
         <a href="#" class="page-header__logo">
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <nav class="main-nav">
-          <button class="main-nav__tiggle" type="button">Open menu</button>
+          <button class="main-nav__toggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
-            <li class="site-menu__item">
-              <a href="catalog.html" class="site-menu__link">Каталог товаров</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
-            <li class="site-menu__item">
-              <a href="form.html" class="site-menu__link">Вязание на заказ</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-menu">
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Поиск по сайту</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
             </li>
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Корзина: пока пуста</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__container">
-        <h1 class="page-title">Милые штуки ручной работы для дома</h1>
+      <div class="container">
+        <h1 class="page-main-title">Милые штуки ручной работы для дома</h1>
         <section class="product-menu">
-          <ul class="product-manu__list">
+          <ul class="product-menu__list">
             <li class="product-menu__item">
               <a href="#" class="product-menu__link">Предметы интерьера</a>
             </li>
@@ -46,81 +46,80 @@
         </section>
         <section class="week-product">
           <div class="week-product__title">
-            <h2 class="week-product__title-text">Вязаные корзинки</h2>
+            <h2 class="page-subtitle">Вязаные корзинки</h2>
             <h3 class="week-product__title-description">Товар недели</h3>
           </div>
           <div class="week-product-description">
-            <p class="week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-            <table class="week-product__info">
-              <tr class="week-product__item">
-                <td class="week-product__value">Цвет:</td>
-                <td class="week-product__value">«Тиффани»/серый</td>
+            <p class="text week-product-description-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+            <table class="info-table">
+              <tr class="info-table__item">
+                <td class="info-table__value">Цвет:</td>
+                <td class="info-table__value">«Тиффани»/серый</td>
               </tr>
-              <tr class="week-product__item">
-                <td class="week-product__value">Диаметр:</td>
-                <td class="week-product__value">25 см</td>
+              <tr class="info-table__item">
+                <td class="info-table__value">Диаметр:</td>
+                <td class="info-table__value">25 см</td>
               </tr>
-              <tr class="week-product__item">
-                <td class="week-product__value">Высота:</td>
-                <td class="week-product__value">15 см</td>
+              <tr class="info-table__item">
+                <td class="info-table__value">Высота:</td>
+                <td class="info-table__value">15 см</td>
               </tr>
             </table>
           </div>
           <img src="http://placehold.it/260x315" alt="Вязаные корзинки" class="week-product__image">
           <b class="week-product__price">Цена: 990 руб.</b>
-          <a href="#" class="week-product-order">ЗАКАЗАТЬ</a>
+          <a href="#" class="button week-product-order">ЗАКАЗАТЬ</a>
         </section>
         <section class="advantages">
-          <div class="advantages__container">
-            <h2 class="advantages__title">Коротко о нас:</h2>
+          <div class="container">
+            <h2 class="page-subtitle">Коротко о нас:</h2>
             <ul class="advantages__list">
-              <li class="advantages__item">Экологически чистые материалы</li>
-              <li class="advantages__item">Скандинавский стиль по российской цене</li>
-              <li class="advantages__item">Увеличивает лайки на фотографиях</li>
-              <li class="advantages__item">Связано вручную с любовью и умилением</li>
-              <li class="advantages__item">Поддержка отечественного производителя</li>
-              <li class="advantages__item">Поставляется в подарочной упаковке</li>
+              <li class="subtitle advantages__item">Экологически чистые материалы</li>
+              <li class="subtitle advantages__item">Скандинавский стиль по российской цене</li>
+              <li class="subtitle advantages__item">Увеличивает лайки на фотографиях</li>
+              <li class="subtitle advantages__item">Связано вручную с любовью и умилением</li>
+              <li class="subtitle advantages__item">Поддержка отечественного производителя</li>
+              <li class="subtitle advantages__item">Поставляется в подарочной упаковке</li>
             </ul>
           </div>
         </section>
         <section class="reviews">
-          <h2 class="reviews__title">Отзывы</h2>
+          <h2 class="page-subtitle">Отзывы</h2>
           <div class="reviews__list reviews__slider">
-            <blockquote class="reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
+            <blockquote class="text reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <cite class="reviews__author">
-              <b class="reviews__author-name">Анастасия Красильникова</b>
-              <b class="reviews__author-email">@misssssiskras</b>
+              <b class="subtitle reviews__author-name">Анастасия Красильникова</b>
+              <b class="text reviews__author-email">@misssssiskras</b>
             </cite>
             <button class="reviews__button reviews__button-next" type="button" name="button"></button>
             <button class="reviews__button reviews__button-previous" type="button" name="button"></button>
-            <a href="#" class="reviews__wirte">Написать</a>
+            <a href="#" class="button reviews__wirte">Написать</a>
           </div>
         </section>
         <section class="contacts">
-          <div class="contacts__container">
-            <h3 class="contact__title">Контакты</h3>
+          <div class="container">
+            <h3 class="page-subtitle">Контакты</h3>
             <table class="contacts__list">
               <tr class="contacts__item">
-                <td class="contacts__value">e-mail</td>
-                <td class="contacts__value">info@mimimishkashop.ru
-                </td>
+                <td class="text contacts__value">e-mail</td>
+                <td class="text contacts__value"><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
               </tr>
               <tr class="contacts__item">
-                <td class="contacts__value">адрес:</td>
-                <td class="contacts__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+                <td class="text contacts__value">адрес:</td>
+                <td class="text contacts__value">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
               </tr>
             </table>
             <div class="contacts__location">
               <img class="contacts__location-map" src="http://placehold.it/320x457" alt="">
             </div>
-            <a class="contacts__write" href="write-company.html">Напишите нам</a>
+            <a class="contacts__write" href="button write-company.html">Напишите нам</a>
           </div>
         </section>
       </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__container">
-        <ul class="page-footer__social social__list">
+      <div class="container">
+        <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst</li>
           <li class="social__item">
@@ -129,10 +128,10 @@
             <a href="#" class="social__link social__link--tw"></a>tw</li>
         </ul>
 
-        <div class="page-footer__coopyright">
-          <b class="page-footer__coopyright-text">Разработано</b>
-          <a href="#" class="page-footer__coopyright-link">
-            <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
+        <div class="page-footer__coopyright coopyright">
+          <b class="coopyright__text">Разработано</b>
+          <a href="#" class="coopyright__link">
+            <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
       </div>
