Разметка form.html

--- a/form.html
+++ b/form.html
@@ -13,19 +13,19 @@
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
-            <li class="site-menu__item">
-              <a href="index.html" class="site-menu__link">Каталог товаров</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
-            <li class="site-menu__item">
-              <a href="form.html" class="site-menu__link">Вязание на заказ</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-menu">
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Поиск по сайту</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
             </li>
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Корзина: пока пуста</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
             </li>
           </ul>
         </nav>
@@ -108,7 +108,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <ul class="page-footer__social social__list">
+        <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst</li>
           <li class="social__item">
@@ -117,10 +117,10 @@
             <a href="#" class="social__link social__link--tw"></a>tw</li>
         </ul>
 
-        <div class="page-footer__coopyright">
-          <b class="page-footer__coopyright-text">Разработано</b>
-          <a href="#" class="page-footer__coopyright-link">
-            <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
+        <div class="page-footer__coopyright coopyright">
+          <b class="coopyright__text">Разработано</b>
+          <a href="#" class="coopyright__link">
+            <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
       </div>
