--- a/catalog.html
+++ b/catalog.html
@@ -3,61 +3,60 @@
   <head>
     <meta charset="UTF-8">
     <title>Каталог товаров</title>
-    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__container">
+      <div class="container">
         <a href="#" class="page-header__logo">
           <img src="http://placehold.it/150x100" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
         <nav class="main-nav">
-          <button class="main-nav__tiggle" type="button">Open menu</button>
+          <button class="main-nav__toggle" type="button">Open menu</button>
           <ul class="main-nav__list site-menu">
-            <li class="site-menu__item">
-              <a href="catalog.html" class="site-menu__link">Каталог товаров</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
-            <li class="site-menu__item">
-              <a href="form.html" class="site-menu__link">Вязание на заказ</a>
+            <li class="main-nav__item site-menu__item">
+              <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-menu">
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Поиск по сайту</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Поиск по сайту</a>
             </li>
-            <li class="user-menu__item">
-              <a href="" class="user-menu__link">Корзина: пока пуста</a>
+            <li class="main-nav__item user-menu__item">
+              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__container">
-        <h1 class="page__title">Каталог товаров</h1>
-        <section class="main-catalog product-preview">
-          <ul class="main-catalog__list product-preview__list">
-            <li class="product-preview__item">
+      <div class="container">
+        <h1 class="page-main__title">Каталог товаров</h1>
+        <section class="main-catalog">
+          <ul class="main-catalog__list">
+            <li class="product-preview">
               <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
-              <h3 class="product-preview__title">Зайчик-попрыгайчик</h3>
+              <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
               <b class="product-preview__info">Рост 30 см, вес 200 г</b>
               <div class="product-preview__buy">
                 <b class="product-preview__price">1 200 руб.</b>
                 <a href="" class="product-preview__add-to-basket">X</a>
               </div>
             </li>
-            <li class="product-preview__item">
+            <li class="product-preview">
               <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
-              <h3 class="product-preview__title">Корзинка для белья</h3>
+              <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
               <b class="product-preview__info">Диаметр 15 см, высота 10 см</b>
               <div class="product-preview__buy">
                 <b class="product-preview__price">690 руб.</b>
                 <a href="" class="product-preview__add-to-basket">X</a>
               </div>
             </li>
-            <li class="product-preview__item">
+            <li class="product-preview">
               <img src="http://placehold.it/260x195" alt="" class="product-preview__img">
-              <h3 class="product-preview__title">Большая корзинка для игрушек</h3>
+              <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
               <b class="product-preview__info">Диаметр 30 см, высота 30 см</b>
               <div class="product-preview__buy">
                 <b class="product-preview__price">1 500 руб.</b>
@@ -69,14 +68,14 @@
         </section>
       </div>
       <section class="production-view">
-        <div class="production-view__container">
+        <div class="container">
 
-          <h2 class="production-view__title">Процесс производства</h2>
+          <h2 class="subtitle production-view__title">Процесс производства</h2>
 
-          <section class="production-view__video">
-            <img src="http://placehold.it/260x150" alt="" class="http://placehold.it/260x195-img">
-            <p class="production-view__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-            <a href="" class="production-view__order">Сделать заказ</a>
+          <section class="product-preview">
+            <img src="http://placehold.it/260x150" alt="" class="product-preview__img">
+            <p class="text product-preview__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+            <a href="" class="button product-preview__order">Сделать заказ</a>
           </section>
 
         </div>
@@ -85,8 +84,8 @@
 
     </main>
     <footer class="page-footer">
-      <div class="page-footer__container">
-        <ul class="page-footer__social social__list">
+      <div class="container">
+        <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link social__link--inst"></a>inst</li>
           <li class="social__item">
@@ -95,10 +94,10 @@
             <a href="#" class="social__link social__link--tw"></a>tw</li>
         </ul>
 
-        <div class="page-footer__coopyright">
-          <b class="page-footer__coopyright-text">Разработано</b>
-          <a href="#" class="page-footer__coopyright-link">
-            <img class="page-footer__coopyright-img" src="http://placehold.it/27x34" alt="">
+        <div class="page-footer__coopyright coopyright">
+          <b class="coopyright__text">Разработано</b>
+          <a href="#" class="coopyright__link">
+            <img class="coopyright__img" src="http://placehold.it/27x34" alt="">
           </a>
         </div>
       </div>
