--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <section class="page-main__title--wrap page-main__title--warp-index">
-          <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
+        <section class="title__wrap title__wrap--index">
+          <h1 class="title">Милые штуки ручной работы для дома</h1>
         </section>
 
         <section class="product-menu">
@@ -70,7 +70,7 @@
               </tr>
             </table>
           </div>
-          <img src="../img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
+          <img src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки" class="week-product__image">
           <b class="week-product__price">Цена: 990 руб.</b>
           <a href="#" class="button week-product-order">ЗАКАЗАТЬ</a>
         </section>
@@ -107,7 +107,7 @@
               <tr class="contacts__item">
                 <td class="text contacts__value">e-mail</td>
                 <td class="text contacts__value">
-                  <a class="contacts__enail" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+                  <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
                 </td>
               </tr>
               <tr class="contacts__item">
@@ -116,9 +116,7 @@
               </tr>
             </table>
             <div class="contacts__location">
-              <img class="contacts__location-map" src="../img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,
-ул. Большая Конюшенная,
-д. 19/8, офис 101">
+              <img class="contacts__location-map" src="img/map-mobile@1x.jpg" width="322" height="457" alt="г. Санкт-Петербург,ул. Большая Конюшенная,д. 19/8, офис 101">
             </div>
             <a class="button contacts__write" href="write-company.html">Напишите нам</a>
           </div>
@@ -129,11 +127,14 @@
       <div class="container">
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--inst"></a>inst</li>
+            <a href="#" class="social__link social__link--inst"></a>inst
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--fb"></a>fb</li>
+            <a href="#" class="social__link social__link--fb"></a>fb
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--tw"></a>tw</li>
+            <a href="#" class="social__link social__link--tw"></a>tw
+          </li>
         </ul>
 
         <div class="page-footer__coopyright coopyright">
