--- a/catalog.html
+++ b/catalog.html
@@ -34,14 +34,14 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <section class="page-main__title--wrap">
-          <h1 class="page-main__title">Каталог товаров</h1>
+        <section class="title__wrap">
+          <h1 class="title">Каталог товаров</h1>
         </section>
 
         <section class="main-catalog">
-          <ul class="main-catalog__list">
-            <li class="product-preview">
-              <img src="../img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
+          <ul class="main-catalog__list product-preview">
+            <li class="product-preview__item">
+              <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
               <b class="product-preview__info">Рост 30 см, вес 200 г</b>
               <div class="product-preview__buy">
@@ -49,9 +49,8 @@
                 <a href="" class="product-preview__add-to-basket">X</a>
               </div>
             </li>
-            <li class="product-preview">
-              <img src="../img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья
-" class="product-preview__img">
+            <li class="product-preview__item">
+              <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
               <b class="product-preview__info">Диаметр 15 см, высота 10 см</b>
               <div class="product-preview__buy">
@@ -59,8 +58,8 @@
                 <a href="" class="product-preview__add-to-basket">X</a>
               </div>
             </li>
-            <li class="product-preview">
-              <img src="../img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
+            <li class="product-preview__item">
+              <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
               <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
               <b class="product-preview__info">Диаметр 30 см, высота 30 см</b>
               <div class="product-preview__buy">
@@ -78,9 +77,7 @@
           <h2 class="subtitle production-view__title">Процесс производства</h2>
 
           <section class="product-preview">
-            <img src="../img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства
-
-" class="product-preview__img">
+            <img src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства" class="product-preview__img">
             <p class="text product-preview__descripion">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
             <a href="" class="button product-preview__order">Сделать заказ</a>
           </section>
@@ -94,11 +91,14 @@
       <div class="container">
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--inst"></a>inst</li>
+            <a href="#" class="social__link social__link--inst"></a>inst
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--fb"></a>fb</li>
+            <a href="#" class="social__link social__link--fb"></a>fb
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--tw"></a>tw</li>
+            <a href="#" class="social__link social__link--tw"></a>tw
+          </li>
         </ul>
 
         <div class="page-footer__coopyright coopyright">
