--- a/form.html
+++ b/form.html
@@ -34,8 +34,8 @@
     </header>
     <main class="page-main">
       <div class="container">
-        <section class="page-main__title--wrap">
-          <h1 class="page-main__title">Вязание на заказ</h1>
+        <section class="title__wrap">
+          <h1 class="title">Вязание на заказ</h1>
         </section>
 
         <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
@@ -114,11 +114,14 @@
       <div class="container">
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--inst"></a>inst</li>
+            <a href="#" class="social__link social__link--inst"></a>inst
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--fb"></a>fb</li>
+            <a href="#" class="social__link social__link--fb"></a>fb
+          </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--tw"></a>tw</li>
+            <a href="#" class="social__link social__link--tw"></a>tw
+          </li>
         </ul>
 
         <div class="page-footer__coopyright coopyright">
