--- a/catalog.html
+++ b/catalog.html
@@ -80,9 +80,9 @@
         <a href="index.html" class="page-header__logo">
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle" type="button"></button>
-        <nav class="main-nav">
-          <ul class="main-nav__site-menu site-menu">
+        <button class="page-header__toggle page-header__toggle--closed" type="button"></button>
+        <nav class="page-header__nav main-nav">
+          <ul class="page-header__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -90,23 +90,23 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__user-menu user-menu">
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Поиск по сайту
-                <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
-                  <use xlink:href="#icon-search"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
-                <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
         </nav>
+        <ul class="page-header__user-menu main-nav__user-menu user-menu">
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
+              <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
+                <use xlink:href="#icon-search"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
+              <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
+                <use xlink:href="#icon-cart"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
 
       </div>
     </header>
@@ -123,6 +123,7 @@
             <li class="product-preview__item">
 
               <img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="" class="product-preview__img">
+                <div class="product-preview__wrapper">
               <div class="product-preview__info">
               <h3 class="subtitle product-preview__title">Зайчик-попрыгайчик</h3>
               <b class="product-preview__value">Рост 30 см, вес 200 г</b>
@@ -135,10 +136,12 @@
                   </svg>
                 </a>
               </div>
+
             </li>
             <li class="product-preview__item">
 
               <img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзинка для белья" class="product-preview__img">
+              <div class="product-preview__wrapper">
               <div class="product-preview__info">
               <h3 class="subtitle product-preview__title">Корзинка для белья</h3>
               <b class="product-preview__value">Диаметр 15 см, высота 10 см</b>
@@ -151,10 +154,12 @@
                   </svg>
                 </a>
               </div>
+              </div>
             </li>
             <li class="product-preview__item">
 
               <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
+                <div class="product-preview__wrapper">
               <div class="product-preview__info">
               <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
               <b class="product-preview__value">Диаметр 30 см, высота 30 см</b>
@@ -166,6 +171,7 @@
                     <use xlink:href="#icon-cart"></use>
                   </svg>
                 </a>
+              </div>
               </div>
             </li>
           </ul>
@@ -231,6 +237,6 @@
         </div>
       </div>
     </footer>
-
+<script src="js/script.js"></script>
   </body>
 </html>
