--- a/form.html
+++ b/form.html
@@ -77,9 +77,9 @@
         <a href="index.html" class="page-header__logo">
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle" type="button"></button>
-        <nav class="main-nav">
-          <ul class="main-nav__site-menu site-menu">
+        <button class="page-header__toggle page-header__toggle--closed" type="button"></button>
+        <nav class="page-header__nav main-nav">
+          <ul class="page-header__site-menu site-menu">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -87,23 +87,23 @@
               <a href="form.html" class="main-nav__link site-menu__link">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__user-menu user-menu">
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Поиск по сайту
-                <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
-                  <use xlink:href="#icon-search"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="main-nav__item user-menu__item">
-              <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
-                <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
-                  <use xlink:href="#icon-cart"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
         </nav>
+        <ul class="page-header__user-menu main-nav__user-menu user-menu">
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
+              <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
+                <use xlink:href="#icon-search"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-nav__item user-menu__item">
+            <a href="" class="main-nav__link user-menu__link">Корзина: пока пуста
+              <svg class="user-menu__link--icon user-menu__link--icon-cart" width="21" height="19">
+                <use xlink:href="#icon-cart"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
 
       </div>
     </header>
@@ -113,83 +113,104 @@
           <h1 class="page-title__text page-title__container--form">Вязание на заказ</h1>
         </div>
       </section>
-      <div class="container">
-
-        <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
+      <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
+        <div class="container">
 
           <p class="text form-order__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-          <fieldset class="form-order__section">
-            <h2 class="form-order__section-title">ТИП</h2>
-            <label class="subtitle form-order__label form-order__label-radio">
-              <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
-              Аксессуар для интерьера
-            </label>
-            <label class="subtitle form-order__label form-order__label-radio">
-              <input class="form-order__input" type="radio" name="type" value="Детская игрушка">
-              Детская игрушка
-            </label>
-          </fieldset>
-          <fieldset class="form-order__section form-order__section-grey">
+          <div class="form-order__section">
+            <h2 class="form-order__section-title">Тип</h2>
+            <div class="form-order__options form-order__options--type">
+              <label class="subtitle form-order__label form-order__label-radio">
+                <input class="form-order__input" type="radio" name="type" value="Аксессуар для интерьера">
+                Аксессуар для интерьера
+              </label>
+              <label class="subtitle form-order__label form-order__label-radio">
+                <input class="form-order__input" type="radio" name="type" value="Детская игрушка">
+                Детская игрушка
+              </label>
+            </div>
+          </div>
+          <div class="form-order__section form-order__section-grey">
             <h2 class="form-order__section-title">Цвет</h2>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__white" checked>
-              Белый
-            </label>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__grey" checked>
-              Серый
-            </label>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__tiffany">
-              «Тиффани»
-            </label>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__black">
-              Черный
-            </label>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__pink">
-              Розовый
-            </label>
-            <label class="subtitle form-order__label form-order__label-checkbox">
-              <input type="checkbox" class="form-order__input" name="product-color__orange">
-              Оранжевый
-            </label>
-          </fieldset>
-          <fieldset class="form-order__section">
-            <h2 class="form-order__section-title form-order__section-title--fullname">ФИО</h2>
-            <label class="subtitle form-order__label-text" for="name">
-              Имя:
-            </label>
-            <input class="form-order__input-text" id="name" type="text" name="name" placeholder="Введите ваше имя*">
-            <label class="subtitle form-order__label-text" for="surname">
-              Фамилия:
-            </label>
-            <input class="form-order__input-text" id="surname" type="text" name="surname" placeholder="Укажите фамилию*">
+            <div class="form-order__options form-order__options--color">
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__white" checked>
+                Белый
+              </label>
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__grey" checked>
+                Серый
+              </label>
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__tiffany">
+                «Тиффани»
+              </label>
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__black">
+                Черный
+              </label>
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__pink">
+                Розовый
+              </label>
+              <label class="subtitle form-order__label form-order__label-checkbox">
+                <input type="checkbox" class="form-order__input" name="product-color__orange">
+                Оранжевый
+              </label>
+            </div>
+          </div>
+          <div class="form-order__section">
+            <h2 class="form-order__section-title form-order__section-title--fullname">Фио</h2>
+            <div class="form-order__options form-order__options--fullname">
+              <div class="form-order__options--wrapper">
+                <label class="subtitle form-order__label-text" for="name">
+                  Имя:
+                </label>
+                <input class="form-order__input-text" id="name" type="text" name="name" placeholder="Введите ваше имя*">
+              </div>
+              <div class="form-order__options--wrapper">
+                <label class="subtitle form-order__label-text" for="surname">
+                  Фамилия:
+                </label>
+                <input class="form-order__input-text" id="surname" type="text" name="surname" placeholder="Укажите фамилию*">
+              </div>
+              <div class="form-order__options--wrapper">
+                <label class="subtitle form-order__label-text" for="patronymic">
+                  Отчество:
+                </label>
+                <input class="form-order__input-text" id="patronymic" type="text" name="patronymic" placeholder="Отчество, если желаете">
 
-            <label class="subtitle form-order__label-text" for="patronymic">
-              Отчество:
-            </label>
-            <input class="form-order__input-text" id="patronymic" type="text" name="patronymic" placeholder="Отчество, если желаете">
+              </div>
+            </div>
+          </div>
 
-          </fieldset>
-          <fieldset class="form-order__section">
-            <h2 class="form-order__section-title form-order__section-title--info">ТЕЛ</h2>
-            <input class="form-order__input-text" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
-          </fieldset>
-          <fieldset class="form-order__section">
-            <h2 class="form-order__section-title form-order__section-title--info">E-MAIL</h2>
-            <input class="form-order__input-text" type="text" name="email" value="" placeholder="Ваш Email*">
-          </fieldset>
-          <fieldset class="form-order__section">
-            <h2 class="form-order__section-title form-order__section-title--info">ДОП</h2>
+          <div class="form-order__section form-order__section-grey form-order__section--double">
+
+                <div class="form-order__options--wrapper">
+                                <h2 class="form-order__section-title form-order__section-title--info">ТЕЛ</h2>
+            <div class="form-order__options">
+              <input class="form-order__input-text" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
+            </div>
+          </div>
+          <div class="form-order__options--wrapper">
+            <h2 class="form-order__section-title form-order__section-title--info">E-&nbsp;mail</h2>
+            <div class="form-order__options">
+              <input class="form-order__input-text" type="text" name="email" value="" placeholder="Ваш Email*">
+            </div>
+          </div>
+        </div>
+
+          <div class="form-order__section">
+            <h2 class="form-order__section-title form-order__section-title--info">доп</h2>
+            <div class="form-order__options">
             <textarea class="form-order__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-          </fieldset>
+          </div>
+          </div>
           <p class="form-order__description form-order__description-required">*Поля обязательны для заполнения</p>
           <button class="button form-order__submit" type="submit">Отправить заказ</button>
-        </form>
+        </div>
+      </form>
 
-      </div>
     </main>
     <footer class="page-footer">
       <div class="container">
@@ -230,6 +251,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="js/script.js"></script>
   </body>
 </html>
