--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <a href="index.html" class="page-header__logo">
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle page-header__toggle--closed" type="button"></button>
-        <nav class="page-header__nav main-nav">
-          <ul class="page-header__site-menu site-menu">
+        <button class="page-header__toggle" type="button"></button>
+        <nav class="page-header__nav main-nav main-nav">
+          <ul class="page-header__site-menu site-menu page-header__site-menu--closed">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link">Каталог товаров</a>
             </li>
@@ -88,7 +88,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="page-header__user-menu main-nav__user-menu user-menu">
+        <ul class="page-header__user-menu main-nav__user-menu user-menu page-header__user-menu--closed">
           <li class="main-nav__item user-menu__item">
             <a href="" class="main-nav__link user-menu__link user-menu__link-text-hidden">Поиск по сайту
               <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
@@ -135,7 +135,7 @@
         </div>
       </section>
       <section class="week-product">
-        <div class="container">
+        <div class="container container--content">
           <div class="week-product__title">
             <h2 class="page-subtitle">Вязаные корзинки</h2>
             <h3 class="week-product__title-description">Товар недели</h3>
@@ -163,7 +163,7 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="container">
+        <div class="container container--content">
           <h2 class="page-subtitle">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="subtitle advantages__item">Экологически чистые&nbsp;материалы
@@ -200,7 +200,7 @@
         </div>
       </section>
       <section class="reviews">
-        <div class="container">
+        <div class="container container--content">
           <h2 class="page-subtitle reviews__title">Отзывы</h2>
           <div class="reviews__list reviews__slider">
             <blockquote class="text reviews__item">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</blockquote>
@@ -225,7 +225,7 @@
         </div>
       </section>
       <section class="contacts">
-        <div class="container">
+        <div class="container container--content">
           <h2 class="page-subtitle">Контакты</h2>
           <div class="contacts__list">
             <p class="contacts__item">
