--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <a href="index.html" class="page-header__logo">
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle page-header__toggle--closed" type="button"></button>
+        <button class="page-header__toggle" type="button"></button>
         <nav class="page-header__nav main-nav">
-          <ul class="page-header__site-menu site-menu">
+          <ul class="page-header__site-menu site-menu page-header__site-menu--closed">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link site-menu__link--catalog">Каталог товаров</a>
             </li>
@@ -90,7 +90,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="page-header__user-menu user-menu">
+        <ul class="page-header__user-menu user-menu page-header__user-menu--closed">
           <li class="main-nav__item user-menu__item user-menu__link-search">
             <a href="" class="main-nav__link user-menu__link user-menu__link--text-hidden">Поиск по сайту
               <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
