--- a/catalog.html
+++ b/catalog.html
@@ -80,9 +80,9 @@
         <a href="index.html" class="page-header__logo">
           <img src="img/logo-mobile.svg" alt="MISHKA" class="page-header__logo-image" width="86" height="35">
         </a>
-        <button class="page-header__toggle page-header__toggle--closed" type="button"></button>
+        <button class="page-header__toggle" type="button"></button>
         <nav class="page-header__nav main-nav">
-          <ul class="page-header__site-menu site-menu">
+          <ul class="page-header__site-menu site-menu page-header__site-menu--closed">
             <li class="main-nav__item site-menu__item">
               <a href="catalog.html" class="main-nav__link site-menu__link site-menu__link--catalog">Каталог товаров</a>
             </li>
@@ -91,7 +91,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="page-header__user-menu user-menu">
+        <ul class="page-header__user-menu user-menu page-header__user-menu--closed">
           <li class="main-nav__item user-menu__item user-menu__link-search">
             <a href="" class="main-nav__link user-menu__link user-menu__link--text-hidden">Поиск по сайту
               <svg class="user-menu__link--icon user-menu__link--icon-search" width="18" height="18">
@@ -168,7 +168,7 @@
                 <img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек" class="product-preview__img">
                 <div class="product-preview__wrapper">
                   <div class="product-preview__info">
-                    <h3 class="subtitle product-preview__title">Большая корзинка для игрушек</h3>
+                    <h3 class="subtitle product-preview__title">Большая корзинка для&nbsp;игрушек</h3>
                     <b class="product-preview__value">Диаметр 30 см, высота 30 см</b>
                   </div>
                   <div class="product-preview__buy">
