--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
     <main class="page-main">
       <section class="page-title page-title--catalog">
         <div class="container page-title__container--catalog">
-          <h1 class="page-title__text">Каталог товаров</h1>
+          <h1 class="page-title__text page-title__text--catalog">Каталог товаров</h1>
         </div>
       </section>
 
