--- a/form.html
+++ b/form.html
@@ -119,7 +119,7 @@
     <main class="page-main">
       <section class="page-title page-title--form">
         <div class="container page-title__container--form">
-          <h1 class="page-title__text">Вязание на заказ</h1>
+          <h1 class="page-title__text page-title__text-form">Вязание на заказ</h1>
         </div>
       </section>
       <form class="form-order" action="https://echo.htmlacademy.ru" method="get">
@@ -195,23 +195,23 @@
 
           <div class="form-order__section form-order__section-grey form-order__section--double">
 
-            <div class="form-order__options--wrapper">
-              <h2 class="form-order__section-title form-order__section-title--info">ТЕЛ</h2>
-              <div class="form-order__section--item">
+            <div class="form-order__options--wrapper ">
+              <h2 class="form-order__section-title form-order__section-title--phone">ТЕЛ</h2>
+              <div class="form-order__section--item form-order__section--phone">
                 <input class="form-order__input-text" type="text" name="phone" value="" placeholder="+7 ХХХ ХХ ХХ*">
               </div>
             </div>
             <div class="form-order__options--wrapper">
-              <h2 class="form-order__section-title form-order__section-title--info">E-&nbsp;mail</h2>
-              <div class="form-order__section--item">
+              <h2 class="form-order__section-title form-order__section-title--email">E-&nbsp;mail</h2>
+              <div class="form-order__section--item form-order__section--email">
                 <input class="form-order__input-text" type="text" name="email" value="" placeholder="Ваш Email*">
               </div>
             </div>
           </div>
 
-          <div class="form-order__section">
-            <h2 class="form-order__section-title form-order__section-title--info">доп</h2>
-            <div class="form-order__options">
+          <div class="form-order__section form-order__section--add">
+            <h2 class="form-order__section-title form-order__section-title--add">доп</h2>
+            <div class="form-order__options form-order__options--add">
               <div class="form-order__options--wrapper">
                 <textarea class="form-order__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
               </div>
