--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <main class="page-main">
       <section class="page-title page-title--index">
         <div class="container page-title__container--index">
-          <h1 class="page-title__text">Милые штуки ручной работы&nbsp;для дома</h1>
+          <h1 class="page-title__text page-title__text--index">Милые штуки ручной работы&nbsp;для дома</h1>
         </div>
       </section>
 
